fix: comic sans on mobile

--- a/src/frontend/styles/common.scss
+++ b/src/frontend/styles/common.scss
@@ -1,3 +1,8 @@
+@font-face {
+	font-family: 'Comic Sans MS';
+	src: url('/assets/COMIC.ttf');
+}
+
 .font-comic-sans {
-	font-family: "Comic Sans MS", "Comic Sans", cursive;
+	font-family: "Comic Sans MS", "Comic Sans";
 }
